Bug 1143802 - Forward jit level information to profiler frontend. r=shu